syntax = "proto3";

package task;

// Opciones para generar código Go en la ruta correcta
option go_package = "gen/go/task";

// El servicio de Tareas
service TaskService {
  // RPC para crear una nueva tarea
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  // ... podrías añadir GetTask, ListTasks, etc.
}

// Mensaje de petición para crear una tarea
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string assignee_id = 3; // Los UUID se suelen pasar como strings
}

// Mensaje de respuesta
message CreateTaskResponse {
  string id = 1;
  string title = 2;
  string status = 3;
}
